fix(authorization): trucate the display of resource ID when too long
Related to CAM-3837

--- a/webapps/client/styles/pages/authorizations.less
+++ b/webapps/client/styles/pages/authorizations.less
@@ -14,6 +14,8 @@ td {
   &.resource-id {
     min-width: 120px;
     max-width: 180px;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
 
   &.permissions {
